Different configuration and fix type for environements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #spring.jpa.database=POSTGRESQL
 #spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://seedsgateway-production.cnl2xyo4cz0a.us-east-1.rds.amazonaws.com:5432/seedsgateway-production?currentSchema=public
+#spring.datasource.url=jdbc:postgresql://seedsgateway-production.cnl2xyo4cz0a.us-east-1.rds.amazonaws.com:5432/seedsgateway-production?currentSchema=public
 #spring.datasource.url=jdbc:postgresql://seedgateway.cnl2xyo4cz0a.us-east-1.rds.amazonaws.com:5432/SeedsGateway?currentSchema=public
+spring.datasource.url=jdbc:postgresql://seeds-gateway-test.cnl2xyo4cz0a.us-east-1.rds.amazonaws.com/SeedsGateway?currentSchema=public
 spring.datasource.username=postgres
 spring.datasource.password=syngenta123
 spring.jpa.show-sql=true
