--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+server.port=8000
 
 
 #spring.jpa.database=POSTGRESQL
