--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,14 +23,15 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-server.port=8000
+server.port=8080
 
 
 #spring.jpa.database=POSTGRESQL
 #spring.datasource.platform=postgres
 #spring.datasource.url=jdbc:postgresql://seedsgateway-production.cnl2xyo4cz0a.us-east-1.rds.amazonaws.com:5432/seedsgateway-production?currentSchema=public
-spring.datasource.url=jdbc:postgresql://seedgateway.cnl2xyo4cz0a.us-east-1.rds.amazonaws.com:5432/SeedsGateway?currentSchema=public
-#spring.datasource.url=jdbc:postgresql://seeds-gateway-test.cnl2xyo4cz0a.us-east-1.rds.amazonaws.com/SeedsGateway?currentSchema=public
+#spring.datasource.url=jdbc:postgresql://seedgateway.cnl2xyo4cz0a.us-east-1.rds.amazonaws.com:5432/SeedsGateway?currentSchema=public
+spring.datasource.url=jdbc:postgresql://seeds-gateway-test.cnl2xyo4cz0a.us-east-1.rds.amazonaws.com/SeedsGateway?currentSchema=public
+#spring.datasource.url=jdbc:postgresql://seedsgateway-release.cnl2xyo4cz0a.us-east-1.rds.amazonaws.com/seedsgateway-release?currentSchema=public
 spring.datasource.username=postgres
 spring.datasource.password=syngenta123
 spring.jpa.show-sql=true
