--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,17 +23,22 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-server.port=8080
+server.port=8000
 
 
 #spring.jpa.database=POSTGRESQL
 #spring.datasource.platform=postgres
+#Syngenta-development-database
+spring.datasource.url=jdbc:postgresql://usaedpossgwd001.c0or7llb3toc.us-east-1.rds.amazonaws.com:5432/sgw_development?currentSchema=public
+spring.datasource.username=sgwadmin
+spring.datasource.password=Syn-Pos-Sgw
+
 #spring.datasource.url=jdbc:postgresql://seedsgateway-production.cnl2xyo4cz0a.us-east-1.rds.amazonaws.com:5432/seedsgateway-production?currentSchema=public
 #spring.datasource.url=jdbc:postgresql://seedgateway.cnl2xyo4cz0a.us-east-1.rds.amazonaws.com:5432/SeedsGateway?currentSchema=public
-spring.datasource.url=jdbc:postgresql://seeds-gateway-test.cnl2xyo4cz0a.us-east-1.rds.amazonaws.com/SeedsGateway?currentSchema=public
+#spring.datasource.url=jdbc:postgresql://seeds-gateway-test.cnl2xyo4cz0a.us-east-1.rds.amazonaws.com/SeedsGateway?currentSchema=public
 #spring.datasource.url=jdbc:postgresql://seedsgateway-release.cnl2xyo4cz0a.us-east-1.rds.amazonaws.com/seedsgateway-release?currentSchema=public
-spring.datasource.username=postgres
-spring.datasource.password=syngenta123
+#spring.datasource.username=postgres
+#spring.datasource.password=syngenta123
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
